[gd_scene load_steps=2 format=3 uid="uid://bdsaj7x8iw7fn"]

[ext_resource type="Script" path="res://main.gd" id="1_slipw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slipw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -46.5
offset_right = 52.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LoadCTEXButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Load CTEX"

[node name="MessageLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ImagePreview" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="SavePNGButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Save as PNG"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.png;PNG Image")
use_native_dialog = true

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/LoadCTEXButton" to="." method="_on_load_ctex_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/SavePNGButton" to="." method="_on_save_png_button_pressed"]
